# POEMCP

./: .gitignore  CLAUDE.md  README.md  examples.md  mcp.json.example  pyproject.toml  server.py
.github/workflows/: publish.yml
scrapers/: common.py  pob_data.py  wiki.py
scrapers/economy/: __init__.py  pricing.py
scrapers/env/: __init__.py  maps.py  scarabs.py
scrapers/mods/: item_mods.py
scrapers/player/: gems.py  items.py  passives.py  pob.py
