[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "poemcp"
version = "0.1.0"
description = "MCP server for Path of Exile game data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "httpx",
    "beautifulsoup4",
]

[project.scripts]
poemcp = "server:main"

[tool.setuptools.packages.find]
include = ["scrapers*"]

[tool.setuptools]
py-modules = ["server"]
