[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "poe-buildmcp"
version = "0.2.0"
description = "MCP server for Path of Exile game data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "httpx",
    "beautifulsoup4",
]

[project.urls]
Homepage = "https://github.com/shalayiding/POEMCP"
Repository = "https://github.com/shalayiding/POEMCP"

[project.scripts]
poemcp = "server:main"

[tool.setuptools.packages.find]
include = ["scrapers*"]

[tool.setuptools]
py-modules = ["server"]
